--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -16,3 +16,27 @@ chichi-toolstrip {
   position: absolute;
   height: 100%;
 }
+
+
+.nesDisplay {
+  position:absolute;
+  width:100%;
+  height:100%;
+  margin: 0px 0px 0px 0px;
+  overflow:hidden;
+}
+
+.chichiPig {
+  position: absolute;
+  float: left;
+  display: block;
+  height: 100%;
+  width: 75%;
+  left: 12.5%;
+}
+
+canvas {
+  position: relative;
+  width: 100%;
+  height: 100%;
+}
