reload memory leaks cleaned up

--- a/src/app/toolstrip/popover/popover.component.html
+++ b/src/app/toolstrip/popover/popover.component.html
@@ -5,7 +5,7 @@
     </chichi-ui-segment> -->
     <div style='z-index: 9999; width: 128px; height: 64px' (mouseenter)="hoverState='hover'"  (mouseleave)="hoverState = ''">
         
-        <button class='circlebutton' >
+        <button class='circlebutton pulse2' >
             <mat-icon svgIcon='{{ icon }}'></mat-icon>
         </button>
     </div>
